...
        label.font = UIFont.systemFont(ofSize: 13)
        return label
    }()
    
    private lazy var likeButton: UIButton = {
        let button = UIButton()
        button.accessibilityIdentifier = "like button off"
        button.setImage(UIImage(named: "LikeNo"), for: .normal)
        button.setImage(UIImage(named: "Like"), for: .selected)
        return button
    }()
    
    override func prepareForReuse() {
...
        dateLabel.text = currentDate
        
        let buttonImageName = photo.isLiked ? "Active" : "No Active"
        likeButton.isSelected = photo.isLiked
        
        if likeButton.isSelected == true {
            likeButton.accessibilityIdentifier = "like button on"
        } else {
            likeButton.accessibilityIdentifier = "like button off"
        }
        likeButton.setImage(UIImage(named: buttonImageName), for: .normal)
    }
    
...
