...
        let alert = UIAlertController(
            title: "Logout",
            message: "Are you sure you want to logout?",
            preferredStyle: .alert
        )
        
        alert.view.accessibilityIdentifier = "Bye bye!"
        
        let logoutAction = UIAlertAction(
            title: "Yes",
            style: .destructive
        ) { [weak self] _ in
            
            self?.presenter?.logoutAlertYesButtonTapped()
        }
        
...
